--- a/View/pom.xml
+++ b/View/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>controlsfx</artifactId>
             <version>11.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>pl.lodz.p.it.krypto.aes</groupId>
+            <artifactId>Model</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -62,7 +68,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>pl.lodz.p.it.krypto.aes.App</mainClass>
+                            <mainClass>View/pl.lodz.p.it.krypto.view.App</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
