--- a/View/src/main/resources/pl/lodz/p/it/krypto/view/textAreas.fxml
+++ b/View/src/main/resources/pl/lodz/p/it/krypto/view/textAreas.fxml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.HBox?>
 
-<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints maxHeight="191.0" minHeight="10.0" percentHeight="15.0" prefHeight="114.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="286.0" minHeight="10.0" percentHeight="85.0" prefHeight="286.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+
+<HBox alignment="CENTER" prefHeight="200.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Wprowadź tekst do zaszyfrowania" style="-fx-border-color: #000;" GridPane.rowIndex="1" />
-      <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Wprowadź tekst do odszyfrowania" style="-fx-border-color: #000;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <TextArea fx:id="plainTextTextArea" prefHeight="200.0" prefWidth="225.0" promptText="Wprowadź tekst do zaszyfrowania" style="-fx-border-color: #000;">
+         <HBox.margin>
+            <Insets right="15.0" />
+         </HBox.margin>
+      </TextArea>
+      <TextArea fx:id="cypherTextTextArea" prefHeight="200.0" prefWidth="225.0" promptText="Wprowadź tekst do odszyfrowania" style="-fx-border-color: #000;">
+         <HBox.margin>
+            <Insets left="15.0" />
+         </HBox.margin>
+      </TextArea>
    </children>
-</GridPane>
+</HBox>
