--- a/View/src/main/resources/pl/lodz/p/it/krypto/view/window.fxml
+++ b/View/src/main/resources/pl/lodz/p/it/krypto/view/window.fxml
@@ -36,11 +36,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <FlowPane alignment="TOP_CENTER" columnHalignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.lodz.p.it.krypto.view.Controller">
@@ -86,6 +88,49 @@
                 </Button>
             </children>
         </HBox>
-        <Pane fx:id="content" prefHeight="200.0" prefWidth="500.0" />
+        <Pane fx:id="content" prefHeight="200.0" prefWidth="500.0">
+         <children>
+            <HBox fx:id="textControlsContainer" alignment="CENTER" prefHeight="200.0" prefWidth="500.0">
+               <children>
+                  <TextArea fx:id="plainTextTextArea" prefHeight="200.0" prefWidth="225.0" promptText="Wprowadź tekst do zaszyfrowania" style="-fx-border-color: #000;" wrapText="true">
+                     <HBox.margin>
+                        <Insets right="15.0" />
+                     </HBox.margin>
+                  </TextArea>
+                  <TextArea fx:id="cypherTextTextArea" prefHeight="200.0" prefWidth="225.0" promptText="Wprowadź tekst do odszyfrowania" style="-fx-border-color: #000;" wrapText="true">
+                     <HBox.margin>
+                        <Insets left="15.0" />
+                     </HBox.margin>
+                  </TextArea>
+               </children>
+            </HBox>
+            <VBox fx:id="fileControlsContainer" alignment="CENTER" prefHeight="200.0" prefWidth="500.0" visible="false">
+               <children>
+                  <Button fx:id="fileChoiceButton" mnemonicParsing="false" onAction="#chooseFile" text="Wybierz plik" />
+                  <VBox alignment="TOP_CENTER">
+                     <children>
+                        <Label text="Wybrany plik:" />
+                        <Label fx:id="inFilePath" wrapText="true" />
+                     </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <padding>
+                        <Insets left="25.0" right="25.0" />
+                     </padding>
+                  </VBox>
+                  <Button fx:id="directoryChoiceButton" mnemonicParsing="false" onAction="#saveFile" text="Wybierz plik wyjściowy" />
+                  <VBox alignment="TOP_CENTER">
+                     <children>
+                        <Label text="Wybrany plik:" />
+                        <Label fx:id="outFilePath" wrapText="true" />
+                     </children>
+                     <VBox.margin>
+                        <Insets left="25.0" right="25.0" />
+                     </VBox.margin>
+                  </VBox>
+               </children>
+            </VBox>
+         </children></Pane>
     </children>
 </FlowPane>
