--- a/View/src/main/resources/pl/lodz/p/it/krypto/view/window.fxml
+++ b/View/src/main/resources/pl/lodz/p/it/krypto/view/window.fxml
@@ -47,7 +47,7 @@
 
 <FlowPane alignment="TOP_CENTER" columnHalignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.lodz.p.it.krypto.view.Controller">
     <children>
-        <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="45.0" prefWidth="497.0">
+        <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="45.0" prefWidth="570.0">
             <children>
                 <Label text="Klucz szyfrowania">
                     <padding>
@@ -59,6 +59,11 @@
                         <Font size="16.0" />
                     </font>
                 </TextField>
+            <RadioButton fx:id="bitButton" prefHeight="17.0" prefWidth="122.0" text="Klucz bitowy">
+                <padding>
+                    <Insets left="10.0" right="10.0" />
+                </padding>
+            </RadioButton>
             </children>
         </HBox>
         <HBox alignment="CENTER" prefHeight="55.0" prefWidth="487.0">
@@ -106,7 +111,7 @@
             </HBox>
             <VBox fx:id="fileControlsContainer" alignment="CENTER" prefHeight="200.0" prefWidth="500.0" visible="false">
                <children>
-                  <Button fx:id="fileChoiceButton" mnemonicParsing="false" onAction="#chooseFile" text="Wybierz plik" />
+                  <Button fx:id="fileChoiceButton" mnemonicParsing="false" onAction="#chooseFile" text="Wybierz plik (np.: .txt, .jpg, .pdf, .mp3, .mp4, .exe)" />
                   <VBox alignment="TOP_CENTER">
                      <children>
                         <Label text="Wybrany plik:" />
